[gd_scene load_steps=17 format=3 uid="uid://bdiwtlqgqhxxb"]

[ext_resource type="Texture2D" uid="uid://cdbukdvlaltle" path="res://Minigame Assets/Pizza Builder/Counter.png" id="1_fddgq"]
[ext_resource type="Script" path="res://Minigames/pizza_builder_minigame.gd" id="1_pvoeg"]
[ext_resource type="Texture2D" uid="uid://b77js6nwx74rb" path="res://Minigame Assets/Pizza Builder/Background.png" id="2_55umh"]
[ext_resource type="Texture2D" uid="uid://bcwcpsrnutyn7" path="res://Minigame Assets/Pizza Builder/Pizza_Doughs.png" id="2_exboh"]
[ext_resource type="Texture2D" uid="uid://6ts7qg5plfxn" path="res://Minigame Assets/Pizza Builder/Sauce_Container.png" id="3_52yi5"]
[ext_resource type="Texture2D" uid="uid://cb17d721i6l3u" path="res://Minigame Assets/Pizza Builder/Cheese_Container.png" id="4_6six0"]
[ext_resource type="Texture2D" uid="uid://b0x8aygshla4e" path="res://Minigame Assets/Pizza Builder/Dough.png" id="4_r5mlv"]
[ext_resource type="Texture2D" uid="uid://3h1uppvqjg12" path="res://Minigame Assets/Pizza Builder/Pepperoni_Container.png" id="5_jfsah"]
[ext_resource type="Texture2D" uid="uid://d0q0sp42qikwo" path="res://Minigame Assets/Pizza Builder/Sauce.png" id="5_w5cpe"]
[ext_resource type="Texture2D" uid="uid://dnrj6llwmwy2b" path="res://Minigame Assets/Pizza Builder/Cheese.png" id="6_bqdqt"]
[ext_resource type="Texture2D" uid="uid://c30gmfry7ioqj" path="res://Minigame Assets/Pizza Builder/Topping_Drag.png" id="7_nktxa"]
[ext_resource type="Texture2D" uid="uid://cygo18a7a45cm" path="res://Minigame Assets/Pizza Builder/Pepperoni.png" id="7_saund"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jr5yt"]
radius = 40.1926

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k32x1"]
radius = 64.0
height = 160.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5rcq"]
size = Vector2(15.3333, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_7scwj"]
radius = 6.0

[node name="Pizza Builder Minigame" type="Node2D"]
script = ExtResource("1_pvoeg")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 240)
scale = Vector2(13.3333, 15)
texture = ExtResource("2_55umh")

[node name="Counter" type="Sprite2D" parent="."]
position = Vector2(321.533, 242.8)
scale = Vector2(1.99042, 1.97667)
texture = ExtResource("1_fddgq")

[node name="Counter Area" type="Area2D" parent="Counter"]
position = Vector2(-0.770187, 10.7251)

[node name="Counter Collision" type="CollisionShape2D" parent="Counter/Counter Area"]
position = Vector2(3.05176e-05, 1.90735e-06)
shape = SubResource("CircleShape2D_jr5yt")

[node name="Toppings" type="Node2D" parent="."]

[node name="Dough" type="Sprite2D" parent="Toppings"]
visible = false
position = Vector2(320, 264)
scale = Vector2(4, 4)
texture = ExtResource("4_r5mlv")

[node name="Sauce" type="Sprite2D" parent="Toppings"]
visible = false
position = Vector2(320, 264)
scale = Vector2(4, 4)
texture = ExtResource("5_w5cpe")

[node name="Cheese" type="Sprite2D" parent="Toppings"]
visible = false
position = Vector2(320, 264)
scale = Vector2(4, 4)
texture = ExtResource("6_bqdqt")

[node name="Pepperoni" type="Sprite2D" parent="Toppings"]
visible = false
position = Vector2(320, 264)
scale = Vector2(4, 4)
texture = ExtResource("7_saund")

[node name="Containers" type="Node2D" parent="Toppings"]

[node name="Dough Stack" type="Area2D" parent="Toppings/Containers"]

[node name="Dough" type="Sprite2D" parent="Toppings/Containers/Dough Stack"]
position = Vector2(512, 272)
scale = Vector2(4, 4)
texture = ExtResource("2_exboh")
hframes = 14

[node name="Dough2" type="Sprite2D" parent="Toppings/Containers/Dough Stack"]
position = Vector2(512, 256)
scale = Vector2(4, 4)
texture = ExtResource("2_exboh")
hframes = 14

[node name="Dough3" type="Sprite2D" parent="Toppings/Containers/Dough Stack"]
position = Vector2(512, 240)
scale = Vector2(4, 4)
texture = ExtResource("2_exboh")
hframes = 14

[node name="Dough Collision Shape" type="CollisionShape2D" parent="Toppings/Containers/Dough Stack"]
position = Vector2(512, 256)
shape = SubResource("CapsuleShape2D_k32x1")

[node name="Dough Button" type="Button" parent="Toppings/Containers/Dough Stack"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 448.0
offset_top = 176.0
offset_right = 576.0
offset_bottom = 336.0
flat = true

[node name="Sauce Container" type="Sprite2D" parent="Toppings/Containers"]
position = Vector2(80, 184)
scale = Vector2(3, 3)
texture = ExtResource("3_52yi5")

[node name="Sauce Container Area" type="Area2D" parent="Toppings/Containers/Sauce Container"]

[node name="Sauce Container Collision" type="CollisionShape2D" parent="Toppings/Containers/Sauce Container/Sauce Container Area"]
position = Vector2(0, -6.33334)
shape = SubResource("RectangleShape2D_f5rcq")

[node name="Sauce Button" type="Button" parent="Toppings/Containers/Sauce Container/Sauce Container Area"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 3.0
flat = true

[node name="Cheese Container" type="Sprite2D" parent="Toppings/Containers"]
position = Vector2(128, 184)
scale = Vector2(3, 3)
texture = ExtResource("4_6six0")

[node name="Cheese Container Area" type="Area2D" parent="Toppings/Containers/Cheese Container"]

[node name="Cheese Container Collision" type="CollisionShape2D" parent="Toppings/Containers/Cheese Container/Cheese Container Area"]
position = Vector2(0, -6.33334)
shape = SubResource("RectangleShape2D_f5rcq")

[node name="Cheese Button" type="Button" parent="Toppings/Containers/Cheese Container/Cheese Container Area"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 3.0
flat = true

[node name="Pepperoni Container" type="Sprite2D" parent="Toppings/Containers"]
position = Vector2(176, 184)
scale = Vector2(3, 3)
texture = ExtResource("5_jfsah")

[node name="Pepperoni Container Area" type="Area2D" parent="Toppings/Containers/Pepperoni Container"]

[node name="Pepperoni Container Collision" type="CollisionShape2D" parent="Toppings/Containers/Pepperoni Container/Pepperoni Container Area"]
position = Vector2(0, -6.33334)
shape = SubResource("RectangleShape2D_f5rcq")

[node name="Pepperoni Button" type="Button" parent="Toppings/Containers/Pepperoni Container/Pepperoni Container Area"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 3.0
flat = true

[node name="Topping Drag" type="Sprite2D" parent="Toppings"]
visible = false
scale = Vector2(4, 4)
texture = ExtResource("7_nktxa")
hframes = 4

[node name="Topping Drag Area" type="Area2D" parent="Toppings/Topping Drag"]

[node name="Topping Drag Collision" type="CollisionShape2D" parent="Toppings/Topping Drag/Topping Drag Area"]
shape = SubResource("CircleShape2D_7scwj")

[node name="Done Button" type="Button" parent="."]
offset_left = 416.0
offset_top = 88.0
offset_right = 568.0
offset_bottom = 136.0
text = "Done
"

[node name="Clear Button" type="Button" parent="."]
offset_left = 248.0
offset_top = 88.0
offset_right = 400.0
offset_bottom = 136.0
text = "Clear"

[connection signal="area_entered" from="Counter/Counter Area" to="." method="_on_counter_area_area_entered"]
[connection signal="area_exited" from="Counter/Counter Area" to="." method="_on_counter_area_area_exited"]
[connection signal="button_down" from="Toppings/Containers/Dough Stack/Dough Button" to="." method="_on_dough_button_button_down"]
[connection signal="button_up" from="Toppings/Containers/Dough Stack/Dough Button" to="." method="_on_dough_button_button_up"]
[connection signal="button_down" from="Toppings/Containers/Sauce Container/Sauce Container Area/Sauce Button" to="." method="_on_sauce_button_button_down"]
[connection signal="button_up" from="Toppings/Containers/Sauce Container/Sauce Container Area/Sauce Button" to="." method="_on_sauce_button_button_up"]
[connection signal="button_down" from="Toppings/Containers/Cheese Container/Cheese Container Area/Cheese Button" to="." method="_on_cheese_button_button_down"]
[connection signal="button_up" from="Toppings/Containers/Cheese Container/Cheese Container Area/Cheese Button" to="." method="_on_cheese_button_button_up"]
[connection signal="button_down" from="Toppings/Containers/Pepperoni Container/Pepperoni Container Area/Pepperoni Button" to="." method="_on_pepperoni_button_button_down"]
[connection signal="button_up" from="Toppings/Containers/Pepperoni Container/Pepperoni Container Area/Pepperoni Button" to="." method="_on_pepperoni_button_button_up"]
[connection signal="pressed" from="Clear Button" to="." method="_on_clear_button_pressed"]
